# django-login-history

./: README.md  setup.cfg
django_login_history/: models.py
django_login_history/migrations/: 0003_login_external_ip_alter_login_city_and_more.py  0004_remove_login_external_ip.py
