[metadata]
name = django_login_history
version = 2022.06
description = A django app to store logins history of each user
url = https://github.com/jaumeba/django-login-history.git
author = Dolidodzik
author_email = dominiklechweb@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
